# ai-honesty

./: .gitignore  ARXIV_DRAFT_SUMMARY.md  CITATION.cff  CLAUDE.md  EpistemicProofs.lean  LICENSE  README.md  RESURRECTION_GUIDE.md  SCOUR_QUICK_REFERENCE.txt  SCOUR_SACRIFICED_MATERIAL.md  SUPPLEMENTARY.md  arxiv_draft_design.md  arxiv_draft_discussion.md  arxiv_draft_evaluation.md  arxiv_draft_intro_background.md  base_vs_instruct_results.csv  benchmark_tensor_overhead_20260214_091023.csv  benchmark_tensor_overhead_20260214_091023.txt  calibration_ece_summary.csv  calibration_reliability_data.csv  code_entropy_traces_20260211_200415.jsonl  cross_model_epistemic_results.csv  decomposition_table3_20260214_122016.csv  decomposition_table3_20260214_122359.csv  epistemic_trace_demo_20260208_184656.json  epistemic_trace_demo_20260316_061220.json  epistemic_trace_highlighted.html  epistemic_trace_latex.tex  exp19_query_types_20260119_162133.csv  exp20_calibration_20260125_153514.csv  exp21_baselines_20260125_160758.csv  exp22_composition_20260125_161859.csv  exp23_alignment_tax_breadth_20260126_123029.csv  exp24_self_report_20260126_115539.csv  exp25_adversarial_phase1_20260126_144159.csv  exp26_tensor_gating_20260131_142403.csv  exp27_citations_20260206_205725.csv  exp27_evaluation_20260206_205725.csv  exp27_per_category_baseline.csv  exp27_per_category_failure_analysis.csv  (+40 more)
EpistemicProofs/: Basic.lean
arxiv/: main.aux  main.bbl  main.blg  main.out  main.tex  main.txt  references.bib
blog/: post1_self_report_inversion.md  post2_why_text_alone_fails.md  (+1 more)
docs/: bundle.tex  (+20 more)
(+303 files in other folders)
