[project]
name = "ai-honesty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate",
    "bitsandbytes",
    "datasets>=4.4.2",
    "giotto-tda",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "seaborn>=0.13.2",
    "sentence-transformers",
    "torch",
    "transformers",
]
