[project]
name = "ai-honesty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate",
    "bitsandbytes",
    "datasets>=4.4.2",
    "duckdb>=1.4.4",
    "giotto-tda",
    "matplotlib",
    "numpy",
    "openai>=2.21.0",
    "pandas",
    "polars>=1.37.1",
    "protobuf>=6.33.4",
    "scipy",
    "seaborn>=0.13.2",
    "sentence-transformers",
    "sentencepiece>=0.2.1",
    "together>=2.1.1",
    "torch",
    "transformers",
]
